--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <title>La Web de la Proteína</title>
+        
     </head>
     <body>
         <header>
@@ -15,13 +19,42 @@
             </section>
             <section>
                 <ul style="margin-right: 30%; text-align: justify;">
-                    <li class="text1"><strong style="color: black;">Proteína: </strong>La proteína ayuda a aumentar el metabolismo y, por lo tanto, a quemar calorías de manera más eficiente. Esto es importante para cualquiera que esté intentando cambiar su composición corporal.</li>
-                    <li class="text1"><strong style="color: black;">Creatina: </strong>La creatina es una sustancia química que se encuentra naturalmente en el cuerpo. También se encuentra en carnes rojas y mariscos. A menudo se utiliza para mejorar el rendimiento del ejercicio y la masa muscular. La creatina participa en la producción de energía para los músculos.</li>
-                    <li class="text1"><strong style="color: black;">BCAA: </strong>Los BCAA pueden ser utilizados como una fuente de energía directa por el cuerpo, especialmente durante el ejercicio prolongado o en situaciones de ayuno. Esto ayuda a preservar los depósitos de glucógeno muscular y a mantener los niveles de energía durante el ejercicio.</li>
-                    <li class="text1"><strong style="color: black;">Colágeno: </strong>Consumir colágeno puede ser bueno para la salud de muchas maneras, desde aliviar el dolor articular hasta mejorar la salud de la piel. Algunos beneficios incluyen: Mejorar la salud de la piel. Alivio del dolor en las articulaciones.</li>
+                    <li class="text1"><strong style="color: black;"><a href="img/Proteina.png">Proteína:</a> </strong>La proteína ayuda a aumentar el metabolismo y, por lo tanto, a quemar calorías de manera más eficiente. Esto es importante para cualquiera que esté intentando cambiar su composición corporal.</li>
+                    <li class="text1"><strong style="color: black;"><a href="img/Creatina.webp">Creatina:</a> </strong>La creatina es una sustancia química que se encuentra naturalmente en el cuerpo. También se encuentra en carnes rojas y mariscos. A menudo se utiliza para mejorar el rendimiento del ejercicio y la masa muscular. La creatina participa en la producción de energía para los músculos.</li>
+                    <li class="text1"><strong style="color: black;"><a href="img/BCAA.webp">BCAA:</a></strong>Los BCAA pueden ser utilizados como una fuente de energía directa por el cuerpo, especialmente durante el ejercicio prolongado o en situaciones de ayuno. Esto ayuda a preservar los depósitos de glucógeno muscular y a mantener los niveles de energía durante el ejercicio.</li>
+                    <li class="text1"><strong style="color: black;"><a href="img/Colágeno.webp">Colágeno:</a></strong>Consumir colágeno puede ser bueno para la salud de muchas maneras, desde aliviar el dolor articular hasta mejorar la salud de la piel. Algunos beneficios incluyen: Mejorar la salud de la piel. Alivio del dolor en las articulaciones.</li>
                 </ul>
             </section>
-            <section></section>
+            <div id="carouselExampleIndicators" class="carousel slide" style="width: 300px; height: 200px; margin-left: 200px; margin-bottom: 20px;">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/Proteina.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/Creatina.webp" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/BCAA.webp" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/Colágeno.webp" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </main>
         <aside>
             <figure id="img1">
@@ -34,10 +67,13 @@
             </figure>
         </aside>
         <footer>
+            <p class="text1"> Puede suscribirse a nuestro <span style="font-weight: bold; color: black;">Newsletter</span> para recibir todas las novedades.</p>
             <p class="text1"> Una nutrición saludable es fundamental para la prevención de factores de riesgo relacionados con la dieta, como el sobrepeso y la obesidad, y las enfermedades no transmisibles asociadas. Una buena salud depende sola y únicamente de Usted.</p>
             <p class="text2" style="background-color: #C3C2CA;"><strong>Contacto</strong></p>
             <p class="text1"><em>+1 5424 1462 Calabria 4565 MA</em></p>
         </footer>
-        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     </body>
 </html>
