--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
             <section>
                 <p class="text1">En nuestro entrenamiento cotidiano solemos encontrarnos con dificultades en nuestra alimentación. En esta web podremos encontrar todo lo necesario para mejorar en nuestra dieta habitual.</p>
                 <h4 class="text2">Sobre nuestros productos</h4>
+                <br>
             </section>
             <section>
                 <ul style="margin-right: 30%; text-align: justify;">
                     <li class="text1"><strong style="color: black;"><a href="img/Proteina.png">Proteína:</a> </strong>La proteína ayuda a aumentar el metabolismo y, por lo tanto, a quemar calorías de manera más eficiente. Esto es importante para cualquiera que esté intentando cambiar su composición corporal.</li>
                     <li class="text1"><strong style="color: black;"><a href="img/Creatina.webp">Creatina:</a> </strong>La creatina es una sustancia química que se encuentra naturalmente en el cuerpo. También se encuentra en carnes rojas y mariscos. A menudo se utiliza para mejorar el rendimiento del ejercicio y la masa muscular. La creatina participa en la producción de energía para los músculos.</li>
-                    <li class="text1"><strong style="color: black;"><a href="img/BCAA.webp">BCAA:</a></strong>Los BCAA pueden ser utilizados como una fuente de energía directa por el cuerpo, especialmente durante el ejercicio prolongado o en situaciones de ayuno. Esto ayuda a preservar los depósitos de glucógeno muscular y a mantener los niveles de energía durante el ejercicio.</li>
-                    <li class="text1"><strong style="color: black;"><a href="img/Colágeno.webp">Colágeno:</a></strong>Consumir colágeno puede ser bueno para la salud de muchas maneras, desde aliviar el dolor articular hasta mejorar la salud de la piel. Algunos beneficios incluyen: Mejorar la salud de la piel. Alivio del dolor en las articulaciones.</li>
+                    <li class="text1"><strong style="color: black;"><a href="img/BCAA.webp">BCAA:</a></strong> Los BCAA pueden ser utilizados como una fuente de energía directa por el cuerpo, especialmente durante el ejercicio prolongado o en situaciones de ayuno. Esto ayuda a preservar los depósitos de glucógeno muscular y a mantener los niveles de energía durante el ejercicio.</li>
+                    <li class="text1"><strong style="color: black;"><a href="img/Colágeno.webp">Colágeno:</a></strong> Consumir colágeno puede ser bueno para la salud de muchas maneras, desde aliviar el dolor articular hasta mejorar la salud de la piel. Algunos beneficios incluyen: Mejorar la salud de la piel. Alivio del dolor en las articulaciones.</li>
                 </ul>
             </section>
             <div id="carouselExampleIndicators" class="carousel slide" style="width: 300px; height: 200px; margin-left: 200px; margin-bottom: 20px;">
@@ -58,16 +59,16 @@
         </main>
         <aside>
             <figure id="img1">
-                <img src="../img/protein1.jpg" width="175px" height="175px">
+                <img src="../img/protein1.jpg" width="225px" height="225px">
                 <figcaption>Una alimentación adecuada es necesaria para un cuerpo saludable.</figcaption>
             </figure>
             <figure id="img2">
-                <img src="../img/protein2.jpg" width="175px" height="175px">
+                <img src="../img/protein2.jpg" width="225px" height="225px">
                 <figcaption>Jamás subestime su potencial.</figcaption>
             </figure>
         </aside>
         <footer>
-            <p class="text1"> Puede suscribirse a nuestro <span style="font-weight: bold; color: black;">Newsletter</span> para recibir todas las novedades.</p>
+            <p class="text1"> Puede suscribirse a nuestro <a href="Form.html" ><span style="font-weight: bold; color: black;">Newsletter</span></a> para recibir todas las novedades.</p>
             <p class="text1"> Una nutrición saludable es fundamental para la prevención de factores de riesgo relacionados con la dieta, como el sobrepeso y la obesidad, y las enfermedades no transmisibles asociadas. Una buena salud depende sola y únicamente de Usted.</p>
             <p class="text2" style="background-color: #C3C2CA;"><strong>Contacto</strong></p>
             <p class="text1"><em>+1 5424 1462 Calabria 4565 MA</em></p>
